Bug 1287627 - Handle flush TextureHost without composition r=nical